remove servlets, add controller, internationalization

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -9,4 +9,19 @@ user.roles=Роли
 user.active=Активный
 user.registered=Зарегистрирован
 meal.title=Моя еда
+meal.add=Добавить еду
+meal.update=Редактировать
+meal.delete=Удалить
+meal.filter.startdate=Начало (дата):
+meal.filter.enddate=Конец (дата):
+meal.filter.starttime=Начало (время):
+meal.filter.endtime=Конец (время):
+meal.filter.button=Отфильтровать
+meal.create.title=Создать еду
+meal.edit.title=Редактировать еду
+meal.form.datetime=Дата/время
+meal.form.description=Описание
+meal.form.calories=Калории
+meal.form.save=Сохранить
+meal.form.cancel=Отмена
 common.select=Выбрать
